fixed font color and font weight to be visible

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,8 @@ body {
     height: 64px;
     margin: 10px;
     text-align: inherit;
-    color: white;
+    color: black;
+    font-weight: bold;
     text-decoration: none;
     cursor: pointer;
 }
